K8s/manifests/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app
  labels:
    app: go-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app: go-web-app
    spec:
      containers:
      - name: go-web-app
        image: sars2006/go-web-app:298707b9e108979493f51dc84a7a7875658386f9
        ports:
        - containerPort: 8080
